<?xml version="1.0" encoding="utf-8"?>
<com.example.presentation.views.ResultView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:app = "com.example.profile.presentation.pofile.ProfileFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:app = "com.example.profile.presentation.pofile.ProfileFragment"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewProfileInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minimal_dimens_stroke"
                android:layout_marginEnd="@dimen/minimal_dimens_stroke"
                android:elevation="2dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    >

                    <TextView
                        android:id="@+id/profileTitle"
                        style="@style/ListItemTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/profile_info_titile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />


                    <TextView
                        android:id="@+id/emailTitleTextView"
                        style="@style/BaseTextHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_email"
                        android:layout_marginTop="25dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profileTitle"
                        app:layout_constraintHorizontal_bias="0.9"
                        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
                        />

                    <TextView
                        android:id="@+id/usernameTitleTextView"
                        style="@style/BaseTextHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_username"
                        android:layout_marginTop="@dimen/minimal_dimens_stroke"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailTitleTextView"
                        app:layout_constraintHorizontal_bias="0.9"
                        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
                        />

                    <TextView
                        android:id="@+id/createdAtTextView"
                        style="@style/BaseTextHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_createdat"
                        android:layout_marginTop="@dimen/minimal_dimens_stroke"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/usernameTitleTextView"
                        app:layout_constraintHorizontal_bias="0.9"
                        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
                        />

                    <GridLayout
                        android:orientation="vertical"
                        android:id="@+id/gridLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintHorizontal_bias="0.3"
                        app:barrierDirection="end"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >

                    </GridLayout>


                        <TextView
                            android:id="@+id/emailField"
                            style="@style/BaseTextHint"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="admin@google.com"
                            android:layout_marginTop="25dp"
                            app:layout_constraintStart_toStartOf="@id/gridLayout"
                            app:layout_constraintTop_toBottomOf="@+id/profileTitle"

                    />

                    <TextView
                        android:id="@+id/usernameField"
                        style="@style/BaseTextHint"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="admin"
                        android:layout_marginTop="@dimen/minimal_dimens_stroke"
                        app:layout_constraintStart_toStartOf="@id/gridLayout"
                        app:layout_constraintTop_toBottomOf="@+id/emailField"

                        />

                    <TextView
                        android:id="@+id/createdAtField"
                        style="@style/BaseTextHint"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="admin@google.com"
                        android:layout_marginTop="@dimen/minimal_dimens_stroke"
                        app:layout_constraintStart_toStartOf="@id/gridLayout"

                        app:layout_constraintTop_toBottomOf="@+id/usernameField"

                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editProfileButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_edit_profile_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/minimal_dimens_stroke"
                app:layout_constraintTop_toBottomOf="@id/cardViewProfileInfo"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_logout_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/minimal_dimens_stroke"
                app:layout_constraintTop_toBottomOf="@id/editProfileButton"
                android:backgroundTint="@color/hint"
                />





        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</com.example.presentation.views.ResultView>